:bug: (az-form) fix label-top caption align center bug

--- a/src/components/form/az-form.styl
+++ b/src/components/form/az-form.styl
@@ -14,6 +14,10 @@ az-form {
     &.label-top .az-caption {
       display: block;
       margin-bottom: 0.5em;
+      align-self: flex-start;
+    }
+    &.label-top az-form-item > *:first-child {
+      flex-direction: column;
     }
   }
   fieldset {
@@ -25,7 +29,6 @@ az-form {
     margin: 0.5em 0;
     & > *:first-child {
       width: 100%;
-      flex-direction: column;
     }
     .az-caption {
       display: inline-block;
